add buttons in show.blade.php and new Project btn

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -17,3 +17,12 @@ main{
     margin-top: 60px;
     margin-left: 260px;
 }
+
+
+.pm-buttons-container{
+    .btn{
+        &:hover{
+            background-color: #74A2A5;
+        }
+    }
+}
