--- a/resources/scss/card.scss
+++ b/resources/scss/card.scss
@@ -2,38 +2,36 @@
 .pm-card-wrapper{
     display: flex;
     flex-wrap: wrap;
+    text-decoration: none;
 
+    // Coloured stripe on top of the card
+    .pm-coloured-stripe{
+        height: 10px;
+        width: 120%;
+        margin-left: -10px;
+        margin-bottom: 20px;
 
+    }
 
+    .pm-card{
+        overflow: hidden;
+        height: 350px;
+        width: 270px;
+        border-radius: 20px;
+        margin-left: 5px;
+        margin-top: 20px;
+        padding: 10px;
+        padding-top: 0;
+        background-color: #adafbe7a;
 
-        text-decoration: none;
-        .pm-bg-light-green{
-            height: 10px;
-            width: 120%;
-            margin-left: -10px;
-            margin-bottom: 20px;
+        p{
+            color: #787878;
 
         }
 
-        .pm-card{
-            overflow: hidden;
-            height: 350px;
-            width: 270px;
-            border-radius: 20px;
-            margin-left: 5px;
-            margin-top: 20px;
-            padding: 10px;
-            padding-top: 0;
-            background-color: #adafbe7a;
-            p{
+        h6{
+            line-height: 20px;
 
-                color: #787878;
-            }
-
-            h6{
-                    line-height: 20px;
-                }
-            }
-
-
+        }
+    }
 }
