--- a/resources/scss/card.scss
+++ b/resources/scss/card.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     text-decoration: none;
+    height: 780px;
 
     // Coloured stripe on top of the card
     .pm-coloured-stripe{
